test/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
  annotations:
    # IP du Virtual Server sur le BIG-IP
    virtual-server.f5.com/ip: "10.80.30.201"

    # Partition BIG-IP (multi-partition support)
    virtual-server.f5.com/partition: "k8s_dev"

    # Redirection HTTPS → HTTP
    ingress.kubernetes.io/ssl-redirect: "true"

    # Autoriser HTTP (false = HTTPS only)
    ingress.kubernetes.io/allow-http: "false"

    # (Optionnel) load balancing method
    virtual-server.f5.com/balance: "round-robin"

spec:
  ingressClassName: f5

  tls:
    - hosts:
        - nginx-ingress.apps.dev.umniabank.ma
      secretName: wildcard-umniabank-tls

  rules:
    - host: nginx-ingress.apps.dev.umniabank.ma
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
